ordsky med klikkbare ord

--- a/ideportal/package.json
+++ b/ideportal/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuewordcloud": "^18.7.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~4.4.0",
